fixed a mistake in z-index for the logo on the homepage; went ahead and updated the logo link for the background image on the other pages

--- a/src/style/homepage.css
+++ b/src/style/homepage.css
@@ -4,7 +4,8 @@
   width: 100%;
   background-attachment: fixed;
 
-  background-image: url(../img/nightmareLogo2.jpeg);
+  /* background-image: url(../img/nightmareLogo2.jpeg); */
+  background-image: url(../img/harvesterLogo_transparent_update2024.png);
   background-repeat: no-repeat;
   background-position: 50% 3rem;
   background-size: auto 85%;
@@ -47,7 +48,7 @@ article {
   text-align: center;
   font-family: 'Cinzel', Times, serif;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-  z-index: 500;
+  z-index: 50;
 }
 
 .article-signature {
